<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PeopleArrange</string>
    <string name="action_settings">Settings</string>
    <string name="btn_return">返回</string>
    <string name="title_activity_people_arrange">人员安排</string>
    <string name="title_activity_list_people">人员名单</string>
    <string name="hint_task_theme">任务主题</string>
    <string name="btn_release">发布</string>
    <string name="btn_all_elect">全选</string>
    <string name="btn_all_concel">撤销</string>
    <string name="btn_commit">确定</string>
    <string name="btn_add">添加</string>
    <string name="title_activity_edit_task">编辑任务</string>
    <string name="hint_dead_time">截止时间</string>
    <string name="hint_task_context">任务内容</string>
    <string name="btn_save_task">保存</string>
    <string name="btn_people_arrange">人员安排</string>

</resources>
