<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/topic_background_darkblue"
        android:padding="@dimen/topic_margin" >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/topic_background_darkblue"
            android:contentDescription="@string/btn_return"
            android:onClick="returnLast"
            android:src="@drawable/btn_return" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/title_activity_edit_task"
            android:textColor="@color/topic_font"
            android:textSize="@dimen/topic_font" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/list_base_margin" >

        <EditText
            android:id="@+id/evTaskTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_task_theme"
            android:lines="3"
            android:paddingBottom="@dimen/list_base_margin" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_dead_time"
            android:lines="1"
            android:paddingBottom="@dimen/list_base_margin" />

        
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/hint_task_context" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/btn_release_margin" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/topic_background_darkblue"
                android:padding="@dimen/btn_release_margin"
                android:text="@string/btn_save_task"
                android:textColor="@color/topic_font"
                android:textSize="@dimen/btn_release_font" 
                android:onClick="btnSave"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/btn_release_margin" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/topic_background_darkblue"
                android:padding="@dimen/btn_release_margin"
                android:text="@string/btn_people_arrange"
                android:textColor="@color/topic_font"
                android:textSize="@dimen/btn_release_font"
                android:onClick="btnPeopleArrange" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>